--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="calc_container">
+        <h2>Enter Details</h2>
         <label for="price">Enter Final Price Bid</label>
         <input type="number" id="userPrice" placeholder="Price"><br>
 
@@ -24,10 +25,10 @@
         <input id="bus-Mem" type="checkbox">Business Member</input>
         <input id="con-Mem" type="checkbox">Consumer Member</input><br>
 
-        <button id="calcBtn" type="button">Calculate</button>
+        <button id="calcBtn" type="button" onclick="calculate_final_price()">Calculate</button>
     </div>
 
-    <div class="info-sec">
+    <div class="charge_breakdown">
         <h2> Charge Breakdown </h2>
         <table>
             <caption>Breakdown</caption>
@@ -36,8 +37,12 @@
                 <th id="amount">Amount</th>
             </tr>
             <tr>
-                <td>Sale Price:</td>
-                <td id="salePriceFee">$0</td>
+                <td>Bid Price:</td>
+                <td id="bidPrice">$0</td>
+            </tr>
+            <tr>
+                <td>Sales Fee:</td>
+                <td id="salesFee">$0</td>
             </tr>
             <tr>
                 <td>Online Live Bid: </td>
@@ -47,15 +52,20 @@
                 <td>Gate:</td>
                 <td id="gateFee">$59</td>
             </tr>
+            <tr>
+                <td>Sales Tax:</td>
+                <td id="salesTax">$0</td>
+            </tr>
         </table>
-    </div>
-
-    <div class="displayPrice">
+        <div class="displayPrice">
 
         <label>Total Amount</label>
-        <label id="finalPrice">$0</label>
+        <label id="finalPriceId">$0</label>
 
     </div>
+    </div>
+
+    
 
     <script type="text/javascript" src="script.js"></script>
 
