--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="charge_breakdown">
         <h2> Charge Breakdown </h2>
         <table>
-            <caption>Breakdown</caption>
+            <caption>Details</caption>
             <tr>
                 <th id="fees">Fees</th>
                 <th id="amount">Amount</th>
