--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
         <label for="sale-tax">Sale Tax</label>
         <input type="number" id="sale-tax" placeholder="Sales Tax"><br>
 
-        <input id="sec-Pay" type="checkbox" checked="checked">Secure Payment</input>
-        <input id="nonSec-Pay" type="checkbox" checked="checked"> Non-Secure Payment</input><br>
+        <div class="payment_type">
+            <input id="sec-Pay" type="checkbox" checked="checked">Secure Payment</input>
+            <input id="nonSec-Pay" type="checkbox" checked="checked"> Non-Secure Payment</input><br>
+        </div>
 
-        <input id="bus-Mem" type="checkbox">Business Member</input>
-        <input id="con-Mem" type="checkbox">Consumer Member</input><br>
+        <div class="membership_type">
+            <input id="bus-Mem" type="checkbox">Business Member</input>
+            <input id="con-Mem" type="checkbox">Consumer Member</input><br>
+        </div>
 
         <button id="calcBtn" type="button" onclick="calculate_final_price()">Calculate</button>
     </div>
@@ -59,13 +63,11 @@
         </table>
         <div class="displayPrice">
 
-        <label>Total Amount</label>
-        <label id="finalPriceId">$0</label>
+            <label>Total Amount</label>
+            <label id="finalPriceId">$0</label>
 
+        </div>
     </div>
-    </div>
-
-    
 
     <script type="text/javascript" src="script.js"></script>
 
