added demo image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <td id="liveBidFee">$0</td>
             </tr>
             <tr>
-                <td>Gate:</td>
+                <td>Gate Fee:</td>
                 <td id="gateFee">$59</td>
             </tr>
             <tr>
