Added Live Bid Fees

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="calc_container">
         <h2>Enter Details</h2>
-        <label for="price">Enter Final Price Bid</label>
+        <label for="price">Enter Bid Price</label>
         <input type="number" id="userPrice" placeholder="Price"><br>
 
         <label for="sale-tax">Sale Tax</label>
